--- a/config/development.sphinx.conf
+++ b/config/development.sphinx.conf
@@ -20,7 +20,7 @@ source event_core_0
   sql_sock = /var/run/mysqld/mysqld.sock
   sql_query_pre = SET NAMES utf8
   sql_query_pre = SET TIME_ZONE = '+0:00'
-  sql_query = SELECT SQL_NO_CACHE `events`.`id` * 1 + 0 AS `id` , `events`.`title` AS `title`, `events`.`description` AS `description`, `organisations`.`name` AS `organisation`, `events`.`id` AS `sphinx_internal_id`, 4201588131 AS `class_crc`, 0 AS `sphinx_deleted` FROM `events`    LEFT OUTER JOIN `organisations` ON `organisations`.id = `events`.organisation_id  WHERE `events`.`id` >= $start AND `events`.`id` <= $end GROUP BY `events`.`id`  ORDER BY NULL
+  sql_query = SELECT SQL_NO_CACHE `events`.`id` * 1 + 0 AS `id` , `events`.`title` AS `title`, `events`.`description` AS `description`, `organisations`.`name` AS `organisation`, `events`.`location` AS `location`, `events`.`id` AS `sphinx_internal_id`, 4201588131 AS `class_crc`, 0 AS `sphinx_deleted` FROM `events`    LEFT OUTER JOIN `organisations` ON `organisations`.id = `events`.organisation_id  WHERE `events`.`id` >= $start AND `events`.`id` <= $end GROUP BY `events`.`id`  ORDER BY NULL
   sql_query_range = SELECT IFNULL(MIN(`id`), 1), IFNULL(MAX(`id`), 1) FROM `events` 
   sql_attr_uint = sphinx_internal_id
   sql_attr_uint = class_crc
