--- a/spec/fixtures/events.yml
+++ b/spec/fixtures/events.yml
@@ -9,8 +9,10 @@ moonies_meetup:
   start_date: <%= DateTime.new + 1.week %>
   location: Cult house 1
   organisation: moonies
+  taggings: weird, creepy
 
 scientologist_party:
   title: Tom Cruise will not be there!
   start_date: <%= DateTime.new + 1.week %>
   location: Cult house 2
+  taggings: weird, creepy, tom
