Added mutliple tag filtering, and nice UI to inform the user of what's going on

--- a/config/tags.yml
+++ b/config/tags.yml
@@ -3,15 +3,15 @@ topics:
   'Workforce': 'Workforce'
   'Marketing': 'Marketing'
   'Operations': 'Operations'
-  'Sales / Lead Conversion': 'Sales / Lead Conversion'
+  'Sales / Lead Conversion': 'Sales'
   'Legal': 'Legal'
-  'Planning / Business Development': 'Planning / Business Development'
+  'Planning / Business Development': 'Planning'
   'Starting up': 'Starting up'
-  'Internet / Online': 'Internet / Online'
-  'Job Hunting': 'Job Hunting'
-  'Personal Growth': 'Personal Growth'
+  'Internet / Online': 'Internet'
+  'Job Hunting': 'Job'
+  'Personal Growth': 'Personal'
 types:
-  'Conference/Trade Show': 'Conference/Trade Show'
+  'Conference/Trade Show': 'Conference'
   'Seminar': 'Seminar'
   'Training Course': 'Training Course'
   'Networking': 'Networking'
@@ -22,26 +22,26 @@ industries:
   'Design': 'Design'
   'Energy': 'Energy'
   'Engineering': 'Engineering'
-  'Fashion & textiles': 'Fashion & textiles'
-  'Finance and accounting': 'Finance and accounting'
+  'Fashion & textiles': 'Fashion'
+  'Finance and accounting': 'Finance'
   'Food': 'Food'
-  'Hospitality and Tourism': 'Hospitality and Tourism'
-  'HR and training': 'HR and training'
-  'Humanities and sociocultural': 'Humanities and sociocultural'
-  'IT / Technology': 'IT / Technology'
+  'Hospitality and Tourism': 'Hospitality'
+  'HR and training': 'HR'
+  'Humanities and sociocultural': 'Humanities'
+  'IT / Technology': 'IT'
   'Languages': 'Languages'
-  'Law & Justice': 'Law & Justice'
+  'Law & Justice': 'Law'
   'Management': 'Management'
   'Manufacturing': 'Manufacturing'
   'Marketing': 'Marketing'
-  'Media & Film': 'Media & Film'
+  'Media & Film': 'Media'
   'Medical': 'Medical'
-  'Performing arts': 'Performing arts'
-  'Personal Growth': 'Personal Growth'
-  'Purchasing, logistics and transport': 'Purchasing, logistics and transport'
-  'Quality, R & D and innovation': 'Quality, R & D and innovation'
-  'Real estate and construction': 'Real estate and construction'
+  'Performing arts': 'Performing'
+  'Personal Growth': 'Personal'
+  'Purchasing, logistics and transport': 'Purchasing'
+  'Quality, R & D and innovation': 'Quality'
+  'Real estate and construction': 'Real-estate'
   'Sales': 'Sales'
   'Science': 'Science'
-  'Security and military': 'Security and military'
-  'Sports and Recreation': 'Sports and Recreation'
+  'Security and military': 'Security'
+  'Sports and Recreation': 'Recreation'
